--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,22 @@
 </dependency>
 
 
+   <dependency>
+        <groupId>com.aventstack</groupId>
+        <artifactId>extentreports-cucumber4-adapter</artifactId>
+        <version>1.2.0</version>
+		<exclusions>
+			<exclusion>
+            	<groupId>io.cucumber</groupId>
+			    <artifactId>cucumber-java</artifactId>
+        	</exclusion>
+			<exclusion>
+		        <groupId>io.cucumber</groupId>
+		        <artifactId>cucumber-core</artifactId>
+			</exclusion>
+		</exclusions>
+    </dependency>
+
 <!-- ******************************************************************** SELENIUM  -->
 
 
@@ -52,9 +68,8 @@
     <artifactId>selenium-java</artifactId>
     <version>3.141.59</version>
 </dependency>
+<!-- 
 
-
-<!-- https://mvnrepository.com/artifact/org.testng/testng -->
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
@@ -62,19 +77,21 @@
       <scope>test</scope>
     </dependency>
  
-<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+
     <dependency>
       <groupId>io.cucumber</groupId>
       <artifactId>cucumber-testng</artifactId>
       <version>6.10.4</version>
     </dependency>
  
-<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
+
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest</artifactId>
       <version>2.2</version>
       <scope>test</scope>
     </dependency>
+
+-->
 </dependencies>
 </project>
