--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -8,7 +8,7 @@ extent.reporter.klov.start=false
 extent.reporter.logger.start=true
 extent.reporter.tabular.start=false
 
-extent.reporter.avent.config=
+extent.reporter.avent.config=src/test/resources/extent.properties
 extent.reporter.bdd.config=
 extent.reporter.cards.config=
 extent.reporter.html.config=
@@ -21,5 +21,5 @@ extent.reporter.bdd.out=test-output/BddReport/
 extent.reporter.cards.out=test-output/CardsReport/
 extent.reporter.email.out=test-output/EmailReport/ExtentEmail.html
 extent.reporter.html.out=test-output/HtmlReport/ExtentHtml.html
-extent.reporter.logger.out=test-output/LoggerReport/
+extent.reporter.logger.out=test-output/LoggerReport/Extentlog.txt
 extent.reporter.tabular.out=test-output/TabularReport/
